src/snapshots/fastexpr_rs__lexer__tests__nullish_coalescing_operator.snap
---
source: src/lexer.rs
expression: "lex(\"??\")"
---
Ok(
    [
        QuestionQuestion,
        Eof,
    ],
)
