src/snapshots/fastexpr_rs__lexer__tests__numbers.snap
---
source: src/lexer.rs
expression: "lex(\"123 -123.456 .456 0.456 123e45 123e+45 123e-45 1. +42.4 -69e12\n    .34e-5 123456789123456789 123456789123456789n -123n\")"
---
Ok(
    [
        Number(
            123.0,
        ),
        Minus,
        Number(
            123.456,
        ),
        Number(
            0.456,
        ),
        Number(
            0.456,
        ),
        Number(
            1.23e47,
        ),
        Number(
            1.23e47,
        ),
        Number(
            1.23e-43,
        ),
        Number(
            1.0,
        ),
        Plus,
        Number(
            42.4,
        ),
        Minus,
        Number(
            69000000000000.0,
        ),
        Number(
            3.4e-6,
        ),
        Number(
            1.2345678912345678e17,
        ),
        BigInt(
            123456789123456789,
        ),
        Minus,
        BigInt(
            123,
        ),
        Eof,
    ],
)
