src/snapshots/fastexpr_rs__lexer__tests__octal_numbers.snap
---
source: src/lexer.rs
expression: "lex(\"0o0 0o1 0O7777 -0o7777 +0o7777 0o123n\")"
---
Ok(
    [
        Number(
            0.0,
        ),
        Number(
            1.0,
        ),
        Number(
            4095.0,
        ),
        Minus,
        Number(
            4095.0,
        ),
        Plus,
        Number(
            4095.0,
        ),
        BigInt(
            83,
        ),
        Eof,
    ],
)
