src/snapshots/fastexpr_rs__lexer__tests__other_punctuation.snap
---
source: src/lexer.rs
expression: "lex(\", ; ( ) [ ] { } . ?. => ...\")"
---
Ok(
    [
        Comma,
        Semicolon,
        LParen,
        RParen,
        LBracket,
        RBracket,
        LBrace,
        RBrace,
        Dot,
        QuestionDot,
        EqGt,
        DotDotDot,
        Eof,
    ],
)
