src/snapshots/fastexpr_rs__lexer__tests__regexes.snap
---
source: src/lexer.rs
expression: "lex(r#\" /foo/, /o\\/o/, /fo\\[[/a\\]]a\\/]o\\\\/, /abc/gimsuy \"#)"
---
Ok(
    [
        Regex(
            "foo",
            None,
        ),
        Comma,
        Regex(
            "o\\/o",
            None,
        ),
        Comma,
        Regex(
            "fo\\[[/a\\]]a\\/]o\\\\",
            None,
        ),
        Comma,
        Regex(
            "abc",
            Some(
                "gimsuy",
            ),
        ),
        Eof,
    ],
)
