src/snapshots/fastexpr_rs__lexer__tests__ternary_operator.snap
---
source: src/lexer.rs
expression: "lex(\"? :\")"
---
Ok(
    [
        Question,
        Colon,
        Eof,
    ],
)
