src/snapshots/fastexpr_rs__lexer__tests__unary_operators.snap
---
source: src/lexer.rs
expression: "lex(\"++ -- !\")"
---
Ok(
    [
        PlusPlus,
        MinusMinus,
        Not,
        Eof,
    ],
)
