src/snapshots/fastexpr_rs__lexer__tests__whitespace.snap
---
source: src/lexer.rs
expression: "lex(\"a \\t\\n\\rb\")"
---
Ok(
    [
        Identifier(
            "a",
        ),
        Identifier(
            "b",
        ),
        Eof,
    ],
)
